07/07/20 2.20.0 Features
- arrow key control of vram
- rotate 90° control for editor
- switching off/on beam controls with buttons
- better confirm dialogs
- fixed palette undo
- shortcut `ctrl + o` to open files

10/05/20 2.18.0 Features
- support for setting beam offsets
- collapsible panels for sprite manager & beam editor
- reordered vue layouts to match Vue Standard
- .eslintrc support properly setup
- replaced shortcuts popup with Quasar OOB popup
- created BeamData.json

10/02/20 2.16.2
- ctrl+left/right events matched up to frame inc/dec
- ctrl+shift+s setup for doing save to sprites and vram
- added help modal and events

06/02/20 2.15.0
- pixel-flip support added
- added variably colored sprite masks
- added palette copy/paste
- added shortcut for show/hide settings

30/06/19 2.12.0
- Fixed palette drop down index reset in settings panel
- Added the crystal flash palette to the palette library
- Added in basic shortcuts for Editor copy/paste/undo/redo/save

22/05/19 2.10.0
- Fixed saving sprite bug
- Added 16x16 pixel editing mode
- Added pixel-shifting tools
- modified editor zoom and the menu that accompanies it.

20/05/19 2.6.1
- Fixed custom palettes edge case
- Added special poses and supporting UI
- Added search bar for standard poses
- Added better renderer error handling for App.vue
- Replaced loading all frames per pose with frame-by-frame logic

07/05/19 2.3.2
- Fixed the default lift pose's use of a redundant tile in Common Sprites by blanking the redundant tile if pose === 1st pose

06/05/19 2.3.1
- Decoupled the majority of CSS from components

05/05/19 2.3.0
- Completely Refactored palette management
- Added what should be ALL of Samus' Palettes to JSON

05/05/19 2.2.0
- Exposed all ROM statics as Table.json

04/05/19 2.1.0
- Fixed bug with closing files after .open using fs.
- Exposed settings files in /libs/ folder.